--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-         
+         <div class="timer"></div>
         <div class="parent">   
             <h1 class="title">Enter Name or Number then press enter key and see</h1>
     		<input class="input_box" value="" type="text" placeholder="Enter Your Number"/>
@@ -19,6 +19,7 @@
                 </tr> 
             </table>
         </div>
+        
         <script src="javascript.js"></script>
     </body>
     </html>
